fixed horizontal scrolling

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,8 @@
 body {
   color: #3d094b;
   position: relative;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 .section-wrap {
   padding-top: 50px;
@@ -150,8 +152,8 @@ footer p {
 
 .footer {
   width: 100%;
-  position: absolute;
-  bottom: 0;
+/*  position: absolute;
+*/  /*bottom: 0;*/
   background-color: darkgrey;
   padding-top: 15px;
   padding-bottom: 10px;
